Skip to content

VLC 1.0.0-rc1 and DVD chapters navigation menu

When playing a DVD the chapters indicator in the navigation menu doesn't follow the playback and is always stuck to chapter 1.

If you use the GUI buttons or the hotkeys it will change chapter but the indicator won't move. However you can click on one chapter in the navigation menu and VLC will play the correct chapter but once again the indicator is stuck to this chapter number you have selected and won't change following the playback, the buttons, the hotkeys or the time slider.

The chapter number is detected by VLC though as it is shown in the messages log.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information