Fix #2765: DVD chapters navigation menu.