modules/gui/qt4/menus.cpp
@@ -1257,6 +1257,19 @@ void QVLCMenu::UpdateItem( intf_thread_t *p_intf, QMenu *menu,
 
 #undef TEXT_OR_VAR
 
+/** HACK for the navigation submenu:
+ * "title %2i" variables take the value 0 if not set
+ */
+static bool CheckTitle( vlc_object_t *p_object, const char *psz_var )
+{
+    int i_title = 0;
+    if( sscanf( psz_var, "title %2i", &i_title ) <= 0 )
+        return true;
+
+    int i_current_title = var_GetInteger( p_object, "title" );
+    return ( i_title == i_current_title );
+}
+
 
 int QVLCMenu::CreateChoicesMenu( QMenu *submenu, const char *psz_var,
         vlc_object_t *p_object, bool b_root )
@@ -1325,7 +1338,8 @@ int QVLCMenu::CreateChoicesMenu( QMenu *submenu, const char *psz_var,
                 else menutext.sprintf( "%d", CURVAL.i_int );
                 CreateAndConnect( submenu, psz_var, menutext, "", ITEM_RADIO,
                         p_object, CURVAL, i_type,
-                        CURVAL.i_int == val.i_int );
+                        ( CURVAL.i_int == val.i_int )
+                        && CheckTitle( p_object, psz_var ) );
                 break;
 
             case VLC_VAR_FLOAT:
